--- a/index.html
+++ b/index.html
@@ -446,6 +446,41 @@ window.addEventListener('click', async () => {
     musicPlaying = true;
   }
 }, { once: true });
+  let currentRoad = null;
+
+document.getElementById('submit-guess').onclick = async function () {
+  if (!currentRoad) return;
+  const userGuess = normalizeName(document.getElementById('guess-input').value.trim());
+  const actualName = normalizeName(currentRoad.name);
+
+  if (userGuess === actualName) {
+    applyColorToAllSegments(actualName, 'gray');
+    guessedSegmentIds.add(currentRoad.id);
+    await saveGuessSegmentIds(actualName, true);
+    document.getElementById('guess-modal').style.display = 'none';
+  } else if (suffixOnlyMismatch(userGuess, actualName)) {
+    applyColorToAllSegments(actualName, 'yellow');
+    document.getElementById('feedback-message').innerText = "Check the suffix!";
+  } else {
+    currentRoad.attempts++;
+    applyColorToAllSegments(actualName, 'red');
+    document.getElementById('feedback-message').innerText = "Incorrect";
+    if (currentRoad.attempts >= 3) {
+      document.getElementById('feedback-message').innerText = `Hint: Begins with ${actualName[0].toUpperCase()}`;
+    }
+  }
+};
+
+document.getElementById('give-up').onclick = async function () {
+  if (!currentRoad) return;
+  const actualName = normalizeName(currentRoad.name);
+  applyColorToAllSegments(actualName, 'orange');
+  guessedSegmentIds.add(currentRoad.id);
+  await saveGuessSegmentIds(actualName, false, true);
+  alert("Correct answer: " + currentRoad.name);
+  document.getElementById('guess-modal').style.display = 'none';
+};
+
 
   </script>
 </body>
